--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,13 +4,18 @@
 
 body {
     font-family: 'Titillium Web', sans-serif;
-    
-    height: 100vh;
-    overflow-x: hidden;
+    height: 100%;
+    width: 100%;
     margin: 0;
+    padding: 0;
+    
 }
 html{
+    margin: 0;
+    padding: 0;
     scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+    
 }
 .nav-btn{
     border: none;
@@ -87,6 +92,7 @@ html{
     padding: 0;
 }
 .list li{
+    clear: both;
     margin: 5em 0;
 }
 .list li a{
@@ -101,14 +107,16 @@ html{
 }
 
 .presentation{
-    width: 100vw;
+    max-width: 100%;
+    border-radius: 0 0 20px 20px;
     height: 60vh;
     background-image: url(https://images.pexels.com/photos/3985168/pexels-photo-3985168.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
     background-size: cover;
     background-repeat: no-repeat;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;}
 .gradient{
-    width: 100%;
+    border-radius: 0 0 20px 20px;
+    max-width: 100%;
     height: 100%;
     background-image: linear-gradient(to bottom right, rgba(5, 12, 107, 0.3), rgba(0, 195, 255, 0.3));
     display: flex;
@@ -118,29 +126,40 @@ html{
 
 .gradient h1{
     color: white;
-    font-size: 8em;
+    font-size: 4em;
     text-transform: uppercase;
     text-shadow: 1px 3px 10px black;
 }
 
 #titulo{
-    font-size: 10vw;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;;
+
+    color: white;
+    justify-content: center;
+    display: flex;
+    background-color: rgb(0, 204, 255);
+    width: 100%;
+    font-size: 6em;
 }
 .secoes{
-    padding: 1em;
-    
+padding: 1em;
+max-width: 100%;
+
 
 }
 .secoes h1{
+    font-size: 8em;
     color:rgb(88, 88, 88);
     font-size: 3em;
     text-transform: uppercase;
 }
 .cards{
+    
     display: flex;
     padding: 2em;
 }
 .cards img{
+  
     margin: .3em;
     border-radius: 50%;
     width: 5em;
@@ -151,7 +170,7 @@ html{
 }
 footer{
     color: white;
-    min-width: 100vw;
+    max-width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -194,12 +213,13 @@ q{
 
 [data-anime].animate{
     opacity: 1;
-    transform: translateX(0em);
+    transform: translateX(0) !important;
     
 }
 
 .main-content{
-    min-width: 100vw;
+
+    width: 100%;
     z-index: 1;
 }
 
@@ -213,7 +233,12 @@ header{
 
 /*Desktop*/
 
-@media (min-width: 700px){
+@media (min-width: 750px){
+    
+    html{
+        scroll-padding: 8em;
+    }
+
     .nav-btn{
         display: none;
     }
@@ -222,7 +247,7 @@ header{
         display: flex;
         position: fixed;
         height: 1vh;
-        min-width: 100vw;
+        min-width: 100%;
         transform: translateX(0);
         flex-direction: row-reverse;
         
@@ -230,12 +255,12 @@ header{
     }
     .nav-softblue, .nav-blue{
         background-color: transparent;
-        min-width: 100vw;
+        min-width: 100%;
     }
     .nav-white{
         background-color: transparent;
         position: fixed;
-        min-width: 100vw;
+        min-width: 100%;
         display: flex;
         align-items: center;
         transition: all .3s;
@@ -252,6 +277,7 @@ header{
         align-items: center;
     }
     .list li{
+        clear: both;
         margin: 1em;
         padding: 0;
         display: inline-block;
