--- a/css/estilo.css
+++ b/css/estilo.css
@@ -11,9 +11,7 @@ body {
     
 }
 html{
-    width: 100%;
-    margin: 0;
-    padding: 0;
+
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
     
@@ -108,7 +106,7 @@ html{
 }
 
 .presentation{
-    max-width: 100%;
+    
     border-radius: 0 0 20px 20px;
     height: 60vh;
     background-image: url(https://images.pexels.com/photos/3985168/pexels-photo-3985168.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
@@ -117,7 +115,7 @@ html{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;}
 .gradient{
     border-radius: 0 0 20px 20px;
-    max-width: 100%;
+    
     height: 100%;
     background-image: linear-gradient(to bottom right, rgba(5, 12, 107, 0.3), rgba(0, 195, 255, 0.3));
     display: flex;
@@ -133,19 +131,13 @@ html{
 }
 
 #titulo{
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;;
 
-    color: white;
-    justify-content: center;
-    display: flex;
-    background-color: rgb(0, 204, 255);
-    width: 100%;
-    font-size: 6em;
+    font-size: 6vh;
 }
 .secoes{
 padding: 1em;
 max-width: 100%;
-overflow-x: hidden;
+
 
 }
 .secoes h1{
@@ -316,4 +308,11 @@ header{
     }
 
 
+}
+
+.secoes{
+    padding: 0 !important;
+    margin: 0 !important;
+    box-sizing: border-box;
+    border: 1px solid green;
 }
